--- a/src/pages/GcSkewPage/GcSkewPage.module.scss
+++ b/src/pages/GcSkewPage/GcSkewPage.module.scss
@@ -1,9 +1,101 @@
-@import '../../assets/sass/main.scss';
+@import "../../assets/sass/main.scss";
 
-.container {
-  display: flex;
-  height: 100vh;
-  @media only screen and (max-width: $bp-small) {
-    flex-direction: column;
+.brushChartContainer {
+  .brushChart {
+    margin-top: -5rem;
+  }
+  .graphCard {
+    margin-bottom: 3rem;
+  }
+
+  h1 {
+    @include MonteBold;
+    font-size: 2rem;
+    line-height: 2.9rem;
+    margin-bottom: 5rem;
+  }
+
+  .input {
+    position: relative;
+    display: block;
+    margin: 3rem 0;
+
+    &__label {
+      position: absolute;
+      left: 0;
+      top: 0;
+      padding: 0.5rem;
+      margin: 0.5rem;
+      white-space: nowrap;
+      transform: translate(0, 0);
+      transform-origin: 0 0;
+      background: $color-white;
+      transition: transform 120ms ease-in;
+      @include MonteBold;
+      font-size: 1.7rem;
+    }
+    &__field {
+      box-sizing: border-box;
+      display: block;
+      width: 100%;
+      border: 3px solid $color-black;
+      padding: 1rem;
+      color: $color-black;
+      background: transparent;
+      border-radius: 4px;
+
+      &:focus,
+      &:not(:placeholder-shown) {
+        & + .input__label {
+          transform: translate(5px, -65%) scale(0.8);
+          color: $color-black;
+        }
+      }
+    }
+  }
+
+  .submitButton {
+    appearance: button;
+    background-color: $color-black;
+    background-image: none;
+    border: 1px solid $color-black;
+    border-radius: 0.5rem;
+    box-shadow: $color-white 0.5rem 0.5rem 0 0, $color-black 0.5rem 0.5rem 0 1px;
+    box-sizing: border-box;
+    color: $color-white;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 2rem;
+    margin: 0 auto;
+    width: 50%;
+    display: block;
+    overflow: visible;
+    padding: 5px 40px;
+    text-align: center;
+    text-transform: none;
+    touch-action: manipulation;
+    user-select: none;
+    -webkit-user-select: none;
+    white-space: nowrap;
+
+    &:focus {
+      text-decoration: none;
+    }
+
+    &:hover {
+      text-decoration: none;
+    }
+
+    &:active {
+      box-shadow: rgba(0, 0, 0, 0.125) 0 3px 5px inset;
+      outline: 0;
+    }
+
+    &:not([disabled]):active {
+      box-shadow: $color-white 2px 2px 0 0, $color-black 2px 2px 0 1px;
+      transform: translate(2px, 2px);
+    }
   }
 }
