netlify deploy issue

--- a/src/pages/SkewCalculator/SkewCalculator.module.scss
+++ b/src/pages/SkewCalculator/SkewCalculator.module.scss
@@ -131,9 +131,9 @@
       padding-bottom: 2rem;
       border-bottom: 0.3rem solid #b0b0b0 ;
     }
-    .second {
-      // margin-left: 10rem;
-    }
+    // .second {
+    //   // margin-left: 10rem;
+    // }
 
     input {
       border: none;
