--- a/src/pages/DnaBox/DnaBox.module.scss
+++ b/src/pages/DnaBox/DnaBox.module.scss
@@ -66,6 +66,7 @@
     line-height: 2rem;
     overflow: visible;
     padding: 1.2rem 4rem;
+    margin-top: 2rem;
     text-align: center;
     text-transform: none;
     touch-action: manipulation;
